rename main.c main.h to client.c client.h

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required(VERSION 2.8)
 
 PROJECT(IReminder)
 
-add_executable(IReminder main.c cJSON.c)
+add_executable(IReminder client.c cJSON.c)
