--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required(VERSION 2.8)
 
 PROJECT(IReminder)
 
-add_executable(IReminder client.c cJSON.c)
+add_executable(IReminder server.c cJSON.c util.c)
