--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -2,5 +2,5 @@ cmake_minimum_required(VERSION 2.8)
 
 PROJECT(ITest)
 
-add_executable(ITest table_test.c)
+add_executable(ITest table_test.c ../common/ae.c ../common/ae.h)
 
