prepare to write time event progress

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -3,5 +3,5 @@ cmake_minimum_required(VERSION 2.8)
 PROJECT(ITest)
 
 #add_executable(ITest table_test.c ../common/ae.c ../common/ae.h ../common/ae_epoll.c ../common/zmalloc.c ../common/zmalloc.h)
-add_executable(ITest table_test.c ../common/zmalloc.c)
+add_executable(ITest table_test.c ../common/zmalloc.c ../common/ae.c)
 
