--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -2,5 +2,5 @@ cmake_minimum_required(VERSION 2.8)
 
 PROJECT(IReminderServer)
 
-add_executable(IReminderServer server.c ../common/cJSON.c ../common/util.c ../common/config.h ../common/anet.c ../common/anet.h)
+add_executable(IReminderServer server.c ../common/cJSON.c ../common/util.c ../common/config.h ../common/anet.c ../common/anet.h ../common/adlist.c ../common/adlist.h)
 
