--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required(VERSION 2.8)
 
 PROJECT(IReminderClient)
 
-#add_executable(erro client.c ../common/cJSON.c)
+add_executable(erro client.c ../common/cJSON.c)
