add simple dynamic string

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required(VERSION 2.8)
 
 ADD_SUBDIRECTORY(server)
 
-ADD_SUBDIRECTORY(test)
+#ADD_SUBDIRECTORY(test)
 
-ADD_SUBDIRECTORY(client)
+#ADD_SUBDIRECTORY(client)
