--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -4,4 +4,7 @@ PROJECT(IReminderClient)
 
 set(__USE_MISC)
 
-add_executable(ir_cli client.c ../common/anet.c ../common/zmalloc.c)
+add_executable(ir_cli client.c)
+
+target_link_libraries(ae)
+target_link_libraries(anet)
