--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -2,5 +2,7 @@ cmake_minimum_required(VERSION 2.8)
 
 PROJECT(ITest)
 
-add_executable(ITest table_test.c ../common/zmalloc.c ../common/ae.c)
+add_executable(ITest table_test.c)
 
+target_link_libraries(zmalloc)
+target_link_libraries(ae)
